game/src/game-screen/input-box.scss
@import '../common.scss';

.InputBox {
    $input-font-size: 2rem;
    $input-gap: 1rem;

    flex: 0;
    font-size: $input-font-size;
    min-width: $input-font-size;
    width: $input-font-size;
    height: $input-font-size;
    line-height: $input-font-size;
    margin:$input-gap;
    padding: $input-gap;
    text-align: center;
    text-transform: capitalize;

    color: $light-text-color;

    background-color: $light-input;
    border-radius: 10%;
}

.DarkMode .InputBox {
    color: $dark-text-color;
    background-color: $dark-input;
}

